Fix more comments and update sqlx-data
